--- a/portofoglio.html
+++ b/portofoglio.html
@@ -191,19 +191,48 @@
         <!--==================== SERVICES ====================-->
         <section class="services section" id="services">
             <h2 class="section__title">Mes Services</h2>
-            <p class="section__subtitle">Voici ce que je propose.</p>
+            <p class="section__subtitle">Voici ce que je propose la creation web pour vos projet personele et je vous
+                creer une application web avec tout le fonctionnalite que vous desire .</p>
         </section>
 
         <!--==================== PROJECTS ====================-->
         <section class="projects section" id="projects">
             <h2 class="section__title">Mes Projets</h2>
-            <p class="section__subtitle">Quelques projets sur lesquels j'ai travaillé.</p>
+            <p class="section__subtitle">Quelques projets sur lesquels j'ai travaillé des intelligence artificiales des
+                chatbot large language model le premiere avec du html et css et javascript cote frontend et la partie
+                backend php et le deuxieme application chatbot AI j ai utilise le framework flask partie backend et
+                frontend html et css et javascript </p>
+            <p class="section__subtitle">Quelques projets sur lesquels j'ai travaillé une ientelligence artificiales
+                capable de genere des images
+            </p>
+            <p class="section__subtitle">Quelques projets sur lesquels j'ai travaillé une todo list avec javascript et
+                html et css cote frontend et cote backend le Node.js
+            </p>
+            <p class="section__subtitle">Quelques projets sur lesquels j'ai travaillé une calculatrice avec du frontend
+                avec du html et css et javascript
+            </p>
+            <p class="section__subtitle">Quelques projets sur lesquels j'ai travaillé une jeux de tetris avec du
+                frontend
+                avec du html et css et javascript
+            </p>
+            <p class="section__subtitle">Quelques projets sur lesquels j'ai travaillé une site web pour une patissiere
+                en italie
+            </p>
+            <p class="section__subtitle">Quelques projets sur lesquels j'ai travaillé une site web des ventes des
+                chausseurs
+            </p>
+            <p class="section__subtitle">Quelques projets sur lesquels j'ai travaillé une
+            </p>
+            <p class="section__subtitle">Quelques projets sur lesquels j'ai travaillé une site web pour une ville une
+                italie qui s appel Verduno
+            </p>
         </section>
 
         <!--==================== CONTACT ====================-->
         <section class="contact section" id="contact">
             <h2 class="section__title">Contactez-moi</h2>
-            <p class="section__subtitle">Vous pouvez me joindre ici.</p>
+            <p class="section__subtitle">Vous pouvez me joindre ici sur ces numero +32 484 43 49 47 ou par email
+                tygamusafiri36@gmail.com.</p>
         </section>
     </main>
 
